etapa3/parser.output
Terminals unused in grammar

   TOKEN_ERROR


State 37 conflicts: 1 shift/reduce
State 48 conflicts: 3 shift/reduce
State 91 conflicts: 6 shift/reduce
State 99 conflicts: 3 shift/reduce
State 107 conflicts: 13 shift/reduce, 9 reduce/reduce
State 147 conflicts: 6 shift/reduce
State 163 conflicts: 7 shift/reduce
State 183 conflicts: 1 shift/reduce
State 204 conflicts: 6 shift/reduce
State 218 conflicts: 6 shift/reduce


Grammar

    0 $accept: program $end

    1 program: ldec

    2 ldec: dec ldec
    3     | %empty

    4 dec: KW_IF '(' exp ')' KW_THEN lcmd
    5    | KW_IF '(' exp ')' KW_THEN lcmd KW_ELSE lcmd
    6    | KW_WHILE '(' exp ')' lcmd
    7    | KW_FOR '(' TK_IDENTIFIER '=' exp KW_TO exp ')' lcmd
    8    | func_dec
    9    | KW_FLOAT TK_IDENTIFIER '=' exp ';'
   10    | KW_CHAR TK_IDENTIFIER '=' exp ';'
   11    | KW_INT TK_IDENTIFIER '=' exp ';'
   12    | KW_INT TK_IDENTIFIER '[' exp ']' ':' vet_dec ';'
   13    | KW_INT TK_IDENTIFIER '[' exp ']' ';'
   14    | KW_FLOAT TK_IDENTIFIER '[' exp ']' ':' vet_dec ';'
   15    | KW_FLOAT TK_IDENTIFIER '[' exp ']' ';'
   16    | KW_CHAR TK_IDENTIFIER '[' exp ']' ':' vet_dec ';'
   17    | KW_CHAR TK_IDENTIFIER '[' exp ']' ';'
   18    | KW_FLOAT '#' TK_IDENTIFIER '=' exp ';'
   19    | KW_CHAR '#' TK_IDENTIFIER '=' exp ';'
   20    | KW_INT '#' TK_IDENTIFIER '=' exp ';'

   21 reset: ',' func_args reset
   22      | %empty

   23 block: '{' lcmd '}'
   24      | %empty

   25 lcmd: cmd ';' lcmd
   26     | cmd ';' cmd lcmd
   27     | dec
   28     | %empty

   29 cmd: block
   30    | TK_IDENTIFIER '=' exp
   31    | '#' TK_IDENTIFIER '=' exp
   32    | '&' TK_IDENTIFIER '=' exp
   33    | TK_IDENTIFIER '=' '#' exp
   34    | TK_IDENTIFIER '=' '&' exp
   35    | TK_IDENTIFIER '[' exp ']' '=' exp
   36    | '#' TK_IDENTIFIER '[' exp ']' '=' exp
   37    | '&' TK_IDENTIFIER '[' exp ']' '=' exp
   38    | TK_IDENTIFIER '=' '#' exp '[' exp ']'
   39    | TK_IDENTIFIER '=' '&' exp '[' exp ']'
   40    | TK_IDENTIFIER '(' l_func_args reset ')'
   41    | print
   42    | read
   43    | KW_RETURN exp

   44 lit: LIT_INTEGER
   45    | LIT_REAL
   46    | LIT_CHAR

   47 vet_dec: lit vet_dec
   48        | lit

   49 exp: TK_IDENTIFIER
   50    | TK_IDENTIFIER '[' exp ']'
   51    | LIT_CHAR
   52    | LIT_REAL
   53    | LIT_INTEGER
   54    | exp '+' exp
   55    | exp '-' exp
   56    | exp '*' exp
   57    | exp '/' exp
   58    | exp '<' exp
   59    | exp '>' exp
   60    | '!' exp
   61    | exp OPERATOR_LE exp
   62    | exp OPERATOR_GE exp
   63    | exp OPERATOR_EQ exp
   64    | exp OPERATOR_NE exp
   65    | exp OPERATOR_AND exp
   66    | exp OPERATOR_OR exp
   67    | TK_IDENTIFIER '(' l_func_args reset ')'
   68    | '(' exp ')'

   69 func_args: LIT_REAL
   70          | LIT_CHAR
   71          | LIT_INTEGER
   72          | TK_IDENTIFIER
   73          | '#' TK_IDENTIFIER
   74          | '&' TK_IDENTIFIER

   75 l_func_args: func_args l_func_args
   76            | %empty

   77 func_dec: func_header block

   78 func_header: KW_INT TK_IDENTIFIER '(' l_func_par reset_func_par ')'
   79            | KW_FLOAT TK_IDENTIFIER '(' l_func_par reset_func_par ')'
   80            | KW_CHAR TK_IDENTIFIER '(' l_func_par reset_func_par ')'

   81 func_par: KW_INT TK_IDENTIFIER
   82         | KW_FLOAT TK_IDENTIFIER
   83         | KW_CHAR TK_IDENTIFIER

   84 l_func_par: func_par l_func_par
   85           | %empty

   86 reset_func_par: ',' func_par reset_func_par
   87               | %empty

   88 print: KW_PRINT lpe

   89 pe: LIT_STRING
   90   | TK_IDENTIFIER
   91   | '&' TK_IDENTIFIER
   92   | '#' TK_IDENTIFIER

   93 lpe: pe lpe
   94    | %empty

   95 read: KW_READ TK_IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'!' (33) 60
'#' (35) 18 19 20 31 33 36 38 73 92
'&' (38) 32 34 37 39 74 91
'(' (40) 4 5 6 7 40 67 68 78 79 80
')' (41) 4 5 6 7 40 67 68 78 79 80
'*' (42) 56
'+' (43) 54
',' (44) 21 86
'-' (45) 55
'/' (47) 57
':' (58) 12 14 16
';' (59) 9 10 11 12 13 14 15 16 17 18 19 20 25 26
'<' (60) 58
'=' (61) 7 9 10 11 18 19 20 30 31 32 33 34 35 36 37 38 39
'>' (62) 59
'[' (91) 12 13 14 15 16 17 35 36 37 38 39 50
']' (93) 12 13 14 15 16 17 35 36 37 38 39 50
'{' (123) 23
'}' (125) 23
error (256)
KW_CHAR (258) 10 16 17 19 80 83
KW_INT (259) 11 12 13 20 78 81
KW_FLOAT (260) 9 14 15 18 79 82
KW_IF (261) 4 5
KW_THEN (262) 4 5
KW_ELSE (263) 5
KW_WHILE (264) 6
KW_FOR (265) 7
KW_READ (266) 95
KW_RETURN (267) 43
KW_PRINT (268) 88
KW_TO (269) 7
OPERATOR_LE (270) 61
OPERATOR_GE (271) 62
OPERATOR_EQ (272) 63
OPERATOR_NE (273) 64
OPERATOR_AND (274) 65
OPERATOR_OR (275) 66
TK_IDENTIFIER (276) 7 9 10 11 12 13 14 15 16 17 18 19 20 30 31 32 33
    34 35 36 37 38 39 40 49 50 67 72 73 74 78 79 80 81 82 83 90 91
    92 95
LIT_INTEGER (277) 44 53 71
LIT_REAL (278) 45 52 69
LIT_CHAR (279) 46 51 70
LIT_STRING (280) 89
TOKEN_ERROR (281)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
ldec (48)
    on left: 2 3, on right: 1 2
dec (49)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20, on right:
    2 27
reset (50)
    on left: 21 22, on right: 21 40 67
block (51)
    on left: 23 24, on right: 29 77
lcmd (52)
    on left: 25 26 27 28, on right: 4 5 6 7 23 25 26
cmd (53)
    on left: 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43, on right:
    25 26
lit (54)
    on left: 44 45 46, on right: 47 48
vet_dec (55)
    on left: 47 48, on right: 12 14 16 47
exp (56)
    on left: 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68, on right: 4 5 6 7 9 10 11 12 13 14 15 16 17 18 19 20 30
    31 32 33 34 35 36 37 38 39 43 50 54 55 56 57 58 59 60 61 62 63
    64 65 66 68
func_args (57)
    on left: 69 70 71 72 73 74, on right: 21 75
l_func_args (58)
    on left: 75 76, on right: 40 67 75
func_dec (59)
    on left: 77, on right: 8
func_header (60)
    on left: 78 79 80, on right: 77
func_par (61)
    on left: 81 82 83, on right: 84 86
l_func_par (62)
    on left: 84 85, on right: 78 79 80 84
reset_func_par (63)
    on left: 86 87, on right: 78 79 80 86
print (64)
    on left: 88, on right: 41
pe (65)
    on left: 89 90 91 92, on right: 93
lpe (66)
    on left: 93 94, on right: 88 93
read (67)
    on left: 95, on right: 42


State 0

    0 $accept: . program $end

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3
    KW_IF     shift, and go to state 4
    KW_WHILE  shift, and go to state 5
    KW_FOR    shift, and go to state 6

    $default  reduce using rule 3 (ldec)

    program      go to state 7
    ldec         go to state 8
    dec          go to state 9
    func_dec     go to state 10
    func_header  go to state 11


State 1

   10 dec: KW_CHAR . TK_IDENTIFIER '=' exp ';'
   16    | KW_CHAR . TK_IDENTIFIER '[' exp ']' ':' vet_dec ';'
   17    | KW_CHAR . TK_IDENTIFIER '[' exp ']' ';'
   19    | KW_CHAR . '#' TK_IDENTIFIER '=' exp ';'
   80 func_header: KW_CHAR . TK_IDENTIFIER '(' l_func_par reset_func_par ')'

    TK_IDENTIFIER  shift, and go to state 12
    '#'            shift, and go to state 13


State 2

   11 dec: KW_INT . TK_IDENTIFIER '=' exp ';'
   12    | KW_INT . TK_IDENTIFIER '[' exp ']' ':' vet_dec ';'
   13    | KW_INT . TK_IDENTIFIER '[' exp ']' ';'
   20    | KW_INT . '#' TK_IDENTIFIER '=' exp ';'
   78 func_header: KW_INT . TK_IDENTIFIER '(' l_func_par reset_func_par ')'

    TK_IDENTIFIER  shift, and go to state 14
    '#'            shift, and go to state 15


State 3

    9 dec: KW_FLOAT . TK_IDENTIFIER '=' exp ';'
   14    | KW_FLOAT . TK_IDENTIFIER '[' exp ']' ':' vet_dec ';'
   15    | KW_FLOAT . TK_IDENTIFIER '[' exp ']' ';'
   18    | KW_FLOAT . '#' TK_IDENTIFIER '=' exp ';'
   79 func_header: KW_FLOAT . TK_IDENTIFIER '(' l_func_par reset_func_par ')'

    TK_IDENTIFIER  shift, and go to state 16
    '#'            shift, and go to state 17


State 4

    4 dec: KW_IF . '(' exp ')' KW_THEN lcmd
    5    | KW_IF . '(' exp ')' KW_THEN lcmd KW_ELSE lcmd

    '('  shift, and go to state 18


State 5

    6 dec: KW_WHILE . '(' exp ')' lcmd

    '('  shift, and go to state 19


State 6

    7 dec: KW_FOR . '(' TK_IDENTIFIER '=' exp KW_TO exp ')' lcmd

    '('  shift, and go to state 20


State 7

    0 $accept: program . $end

    $end  shift, and go to state 21


State 8

    1 program: ldec .

    $default  reduce using rule 1 (program)


State 9

    2 ldec: dec . ldec

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3
    KW_IF     shift, and go to state 4
    KW_WHILE  shift, and go to state 5
    KW_FOR    shift, and go to state 6

    $default  reduce using rule 3 (ldec)

    ldec         go to state 22
    dec          go to state 9
    func_dec     go to state 10
    func_header  go to state 11


State 10

    8 dec: func_dec .

    $default  reduce using rule 8 (dec)


State 11

   77 func_dec: func_header . block

    '{'  shift, and go to state 23

    $default  reduce using rule 24 (block)

    block  go to state 24


State 12

   10 dec: KW_CHAR TK_IDENTIFIER . '=' exp ';'
   16    | KW_CHAR TK_IDENTIFIER . '[' exp ']' ':' vet_dec ';'
   17    | KW_CHAR TK_IDENTIFIER . '[' exp ']' ';'
   80 func_header: KW_CHAR TK_IDENTIFIER . '(' l_func_par reset_func_par ')'

    '='  shift, and go to state 25
    '('  shift, and go to state 26
    '['  shift, and go to state 27


State 13

   19 dec: KW_CHAR '#' . TK_IDENTIFIER '=' exp ';'

    TK_IDENTIFIER  shift, and go to state 28


State 14

   11 dec: KW_INT TK_IDENTIFIER . '=' exp ';'
   12    | KW_INT TK_IDENTIFIER . '[' exp ']' ':' vet_dec ';'
   13    | KW_INT TK_IDENTIFIER . '[' exp ']' ';'
   78 func_header: KW_INT TK_IDENTIFIER . '(' l_func_par reset_func_par ')'

    '='  shift, and go to state 29
    '('  shift, and go to state 30
    '['  shift, and go to state 31


State 15

   20 dec: KW_INT '#' . TK_IDENTIFIER '=' exp ';'

    TK_IDENTIFIER  shift, and go to state 32


State 16

    9 dec: KW_FLOAT TK_IDENTIFIER . '=' exp ';'
   14    | KW_FLOAT TK_IDENTIFIER . '[' exp ']' ':' vet_dec ';'
   15    | KW_FLOAT TK_IDENTIFIER . '[' exp ']' ';'
   79 func_header: KW_FLOAT TK_IDENTIFIER . '(' l_func_par reset_func_par ')'

    '='  shift, and go to state 33
    '('  shift, and go to state 34
    '['  shift, and go to state 35


State 17

   18 dec: KW_FLOAT '#' . TK_IDENTIFIER '=' exp ';'

    TK_IDENTIFIER  shift, and go to state 36


State 18

    4 dec: KW_IF '(' . exp ')' KW_THEN lcmd
    5    | KW_IF '(' . exp ')' KW_THEN lcmd KW_ELSE lcmd

    TK_IDENTIFIER  shift, and go to state 37
    LIT_INTEGER    shift, and go to state 38
    LIT_REAL       shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    '!'            shift, and go to state 41
    '('            shift, and go to state 42

    exp  go to state 43


State 19

    6 dec: KW_WHILE '(' . exp ')' lcmd

    TK_IDENTIFIER  shift, and go to state 37
    LIT_INTEGER    shift, and go to state 38
    LIT_REAL       shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    '!'            shift, and go to state 41
    '('            shift, and go to state 42

    exp  go to state 44


State 20

    7 dec: KW_FOR '(' . TK_IDENTIFIER '=' exp KW_TO exp ')' lcmd

    TK_IDENTIFIER  shift, and go to state 45


State 21

    0 $accept: program $end .

    $default  accept


State 22

    2 ldec: dec ldec .

    $default  reduce using rule 2 (ldec)


State 23

   23 block: '{' . lcmd '}'

    KW_CHAR        shift, and go to state 1
    KW_INT         shift, and go to state 2
    KW_FLOAT       shift, and go to state 3
    KW_IF          shift, and go to state 4
    KW_WHILE       shift, and go to state 5
    KW_FOR         shift, and go to state 6
    KW_READ        shift, and go to state 46
    KW_RETURN      shift, and go to state 47
    KW_PRINT       shift, and go to state 48
    TK_IDENTIFIER  shift, and go to state 49
    '#'            shift, and go to state 50
    '{'            shift, and go to state 23
    '&'            shift, and go to state 51

    '}'       reduce using rule 28 (lcmd)
    $default  reduce using rule 24 (block)

    dec          go to state 52
    block        go to state 53
    lcmd         go to state 54
    cmd          go to state 55
    func_dec     go to state 10
    func_header  go to state 11
    print        go to state 56
    read         go to state 57


State 24

   77 func_dec: func_header block .

    $default  reduce using rule 77 (func_dec)


State 25

   10 dec: KW_CHAR TK_IDENTIFIER '=' . exp ';'

    TK_IDENTIFIER  shift, and go to state 37
    LIT_INTEGER    shift, and go to state 38
    LIT_REAL       shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    '!'            shift, and go to state 41
    '('            shift, and go to state 42

    exp  go to state 58


State 26

   80 func_header: KW_CHAR TK_IDENTIFIER '(' . l_func_par reset_func_par ')'

    KW_CHAR   shift, and go to state 59
    KW_INT    shift, and go to state 60
    KW_FLOAT  shift, and go to state 61

    $default  reduce using rule 85 (l_func_par)

    func_par    go to state 62
    l_func_par  go to state 63


State 27

   16 dec: KW_CHAR TK_IDENTIFIER '[' . exp ']' ':' vet_dec ';'
   17    | KW_CHAR TK_IDENTIFIER '[' . exp ']' ';'

    TK_IDENTIFIER  shift, and go to state 37
    LIT_INTEGER    shift, and go to state 38
    LIT_REAL       shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    '!'            shift, and go to state 41
    '('            shift, and go to state 42

    exp  go to state 64


State 28

   19 dec: KW_CHAR '#' TK_IDENTIFIER . '=' exp ';'

    '='  shift, and go to state 65


State 29

   11 dec: KW_INT TK_IDENTIFIER '=' . exp ';'

    TK_IDENTIFIER  shift, and go to state 37
    LIT_INTEGER    shift, and go to state 38
    LIT_REAL       shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    '!'            shift, and go to state 41
    '('            shift, and go to state 42

    exp  go to state 66


State 30

   78 func_header: KW_INT TK_IDENTIFIER '(' . l_func_par reset_func_par ')'

    KW_CHAR   shift, and go to state 59
    KW_INT    shift, and go to state 60
    KW_FLOAT  shift, and go to state 61

    $default  reduce using rule 85 (l_func_par)

    func_par    go to state 62
    l_func_par  go to state 67


State 31

   12 dec: KW_INT TK_IDENTIFIER '[' . exp ']' ':' vet_dec ';'
   13    | KW_INT TK_IDENTIFIER '[' . exp ']' ';'

    TK_IDENTIFIER  shift, and go to state 37
    LIT_INTEGER    shift, and go to state 38
    LIT_REAL       shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    '!'            shift, and go to state 41
    '('            shift, and go to state 42

    exp  go to state 68


State 32

   20 dec: KW_INT '#' TK_IDENTIFIER . '=' exp ';'

    '='  shift, and go to state 69


State 33

    9 dec: KW_FLOAT TK_IDENTIFIER '=' . exp ';'

    TK_IDENTIFIER  shift, and go to state 37
    LIT_INTEGER    shift, and go to state 38
    LIT_REAL       shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    '!'            shift, and go to state 41
    '('            shift, and go to state 42

    exp  go to state 70


State 34

   79 func_header: KW_FLOAT TK_IDENTIFIER '(' . l_func_par reset_func_par ')'

    KW_CHAR   shift, and go to state 59
    KW_INT    shift, and go to state 60
    KW_FLOAT  shift, and go to state 61

    $default  reduce using rule 85 (l_func_par)

    func_par    go to state 62
    l_func_par  go to state 71


State 35

   14 dec: KW_FLOAT TK_IDENTIFIER '[' . exp ']' ':' vet_dec ';'
   15    | KW_FLOAT TK_IDENTIFIER '[' . exp ']' ';'

    TK_IDENTIFIER  shift, and go to state 37
    LIT_INTEGER    shift, and go to state 38
    LIT_REAL       shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    '!'            shift, and go to state 41
    '('            shift, and go to state 42

    exp  go to state 72


State 36

   18 dec: KW_FLOAT '#' TK_IDENTIFIER . '=' exp ';'

    '='  shift, and go to state 73


State 37

   49 exp: TK_IDENTIFIER .
   50    | TK_IDENTIFIER . '[' exp ']'
   67    | TK_IDENTIFIER . '(' l_func_args reset ')'

    '('  shift, and go to state 74
    '['  shift, and go to state 75

    '['       [reduce using rule 49 (exp)]
    $default  reduce using rule 49 (exp)


State 38

   53 exp: LIT_INTEGER .

    $default  reduce using rule 53 (exp)


State 39

   52 exp: LIT_REAL .

    $default  reduce using rule 52 (exp)


State 40

   51 exp: LIT_CHAR .

    $default  reduce using rule 51 (exp)


State 41

   60 exp: '!' . exp

    TK_IDENTIFIER  shift, and go to state 37
    LIT_INTEGER    shift, and go to state 38
    LIT_REAL       shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    '!'            shift, and go to state 41
    '('            shift, and go to state 42

    exp  go to state 76


State 42

   68 exp: '(' . exp ')'

    TK_IDENTIFIER  shift, and go to state 37
    LIT_INTEGER    shift, and go to state 38
    LIT_REAL       shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    '!'            shift, and go to state 41
    '('            shift, and go to state 42

    exp  go to state 77


State 43

    4 dec: KW_IF '(' exp . ')' KW_THEN lcmd
    5    | KW_IF '(' exp . ')' KW_THEN lcmd KW_ELSE lcmd
   54 exp: exp . '+' exp
   55    | exp . '-' exp
   56    | exp . '*' exp
   57    | exp . '/' exp
   58    | exp . '<' exp
   59    | exp . '>' exp
   61    | exp . OPERATOR_LE exp
   62    | exp . OPERATOR_GE exp
   63    | exp . OPERATOR_EQ exp
   64    | exp . OPERATOR_NE exp
   65    | exp . OPERATOR_AND exp
   66    | exp . OPERATOR_OR exp

    OPERATOR_LE   shift, and go to state 78
    OPERATOR_GE   shift, and go to state 79
    OPERATOR_EQ   shift, and go to state 80
    OPERATOR_NE   shift, and go to state 81
    OPERATOR_AND  shift, and go to state 82
    OPERATOR_OR   shift, and go to state 83
    '<'           shift, and go to state 84
    '>'           shift, and go to state 85
    '+'           shift, and go to state 86
    '-'           shift, and go to state 87
    '*'           shift, and go to state 88
    '/'           shift, and go to state 89
    ')'           shift, and go to state 90


State 44

    6 dec: KW_WHILE '(' exp . ')' lcmd
   54 exp: exp . '+' exp
   55    | exp . '-' exp
   56    | exp . '*' exp
   57    | exp . '/' exp
   58    | exp . '<' exp
   59    | exp . '>' exp
   61    | exp . OPERATOR_LE exp
   62    | exp . OPERATOR_GE exp
   63    | exp . OPERATOR_EQ exp
   64    | exp . OPERATOR_NE exp
   65    | exp . OPERATOR_AND exp
   66    | exp . OPERATOR_OR exp

    OPERATOR_LE   shift, and go to state 78
    OPERATOR_GE   shift, and go to state 79
    OPERATOR_EQ   shift, and go to state 80
    OPERATOR_NE   shift, and go to state 81
    OPERATOR_AND  shift, and go to state 82
    OPERATOR_OR   shift, and go to state 83
    '<'           shift, and go to state 84
    '>'           shift, and go to state 85
    '+'           shift, and go to state 86
    '-'           shift, and go to state 87
    '*'           shift, and go to state 88
    '/'           shift, and go to state 89
    ')'           shift, and go to state 91


State 45

    7 dec: KW_FOR '(' TK_IDENTIFIER . '=' exp KW_TO exp ')' lcmd

    '='  shift, and go to state 92


State 46

   95 read: KW_READ . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 93


State 47

   43 cmd: KW_RETURN . exp

    TK_IDENTIFIER  shift, and go to state 37
    LIT_INTEGER    shift, and go to state 38
    LIT_REAL       shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    '!'            shift, and go to state 41
    '('            shift, and go to state 42

    exp  go to state 94


State 48

   88 print: KW_PRINT . lpe

    TK_IDENTIFIER  shift, and go to state 95
    LIT_STRING     shift, and go to state 96
    '#'            shift, and go to state 97
    '&'            shift, and go to state 98

    TK_IDENTIFIER  [reduce using rule 94 (lpe)]
    '#'            [reduce using rule 94 (lpe)]
    '&'            [reduce using rule 94 (lpe)]
    $default       reduce using rule 94 (lpe)

    pe   go to state 99
    lpe  go to state 100


State 49

   30 cmd: TK_IDENTIFIER . '=' exp
   33    | TK_IDENTIFIER . '=' '#' exp
   34    | TK_IDENTIFIER . '=' '&' exp
   35    | TK_IDENTIFIER . '[' exp ']' '=' exp
   38    | TK_IDENTIFIER . '=' '#' exp '[' exp ']'
   39    | TK_IDENTIFIER . '=' '&' exp '[' exp ']'
   40    | TK_IDENTIFIER . '(' l_func_args reset ')'

    '='  shift, and go to state 101
    '('  shift, and go to state 102
    '['  shift, and go to state 103


State 50

   31 cmd: '#' . TK_IDENTIFIER '=' exp
   36    | '#' . TK_IDENTIFIER '[' exp ']' '=' exp

    TK_IDENTIFIER  shift, and go to state 104


State 51

   32 cmd: '&' . TK_IDENTIFIER '=' exp
   37    | '&' . TK_IDENTIFIER '[' exp ']' '=' exp

    TK_IDENTIFIER  shift, and go to state 105


State 52

   27 lcmd: dec .

    $default  reduce using rule 27 (lcmd)


State 53

   29 cmd: block .

    $default  reduce using rule 29 (cmd)


State 54

   23 block: '{' lcmd . '}'

    '}'  shift, and go to state 106


State 55

   25 lcmd: cmd . ';' lcmd
   26     | cmd . ';' cmd lcmd

    ';'  shift, and go to state 107


State 56

   41 cmd: print .

    $default  reduce using rule 41 (cmd)


State 57

   42 cmd: read .

    $default  reduce using rule 42 (cmd)


State 58

   10 dec: KW_CHAR TK_IDENTIFIER '=' exp . ';'
   54 exp: exp . '+' exp
   55    | exp . '-' exp
   56    | exp . '*' exp
   57    | exp . '/' exp
   58    | exp . '<' exp
   59    | exp . '>' exp
   61    | exp . OPERATOR_LE exp
   62    | exp . OPERATOR_GE exp
   63    | exp . OPERATOR_EQ exp
   64    | exp . OPERATOR_NE exp
   65    | exp . OPERATOR_AND exp
   66    | exp . OPERATOR_OR exp

    OPERATOR_LE   shift, and go to state 78
    OPERATOR_GE   shift, and go to state 79
    OPERATOR_EQ   shift, and go to state 80
    OPERATOR_NE   shift, and go to state 81
    OPERATOR_AND  shift, and go to state 82
    OPERATOR_OR   shift, and go to state 83
    '<'           shift, and go to state 84
    '>'           shift, and go to state 85
    '+'           shift, and go to state 86
    '-'           shift, and go to state 87
    '*'           shift, and go to state 88
    '/'           shift, and go to state 89
    ';'           shift, and go to state 108


State 59

   83 func_par: KW_CHAR . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 109


State 60

   81 func_par: KW_INT . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 110


State 61

   82 func_par: KW_FLOAT . TK_IDENTIFIER

    TK_IDENTIFIER  shift, and go to state 111


State 62

   84 l_func_par: func_par . l_func_par

    KW_CHAR   shift, and go to state 59
    KW_INT    shift, and go to state 60
    KW_FLOAT  shift, and go to state 61

    $default  reduce using rule 85 (l_func_par)

    func_par    go to state 62
    l_func_par  go to state 112


State 63

   80 func_header: KW_CHAR TK_IDENTIFIER '(' l_func_par . reset_func_par ')'

    ','  shift, and go to state 113

    $default  reduce using rule 87 (reset_func_par)

    reset_func_par  go to state 114


State 64

   16 dec: KW_CHAR TK_IDENTIFIER '[' exp . ']' ':' vet_dec ';'
   17    | KW_CHAR TK_IDENTIFIER '[' exp . ']' ';'
   54 exp: exp . '+' exp
   55    | exp . '-' exp
   56    | exp . '*' exp
   57    | exp . '/' exp
   58    | exp . '<' exp
   59    | exp . '>' exp
   61    | exp . OPERATOR_LE exp
   62    | exp . OPERATOR_GE exp
   63    | exp . OPERATOR_EQ exp
   64    | exp . OPERATOR_NE exp
   65    | exp . OPERATOR_AND exp
   66    | exp . OPERATOR_OR exp

    OPERATOR_LE   shift, and go to state 78
    OPERATOR_GE   shift, and go to state 79
    OPERATOR_EQ   shift, and go to state 80
    OPERATOR_NE   shift, and go to state 81
    OPERATOR_AND  shift, and go to state 82
    OPERATOR_OR   shift, and go to state 83
    '<'           shift, and go to state 84
    '>'           shift, and go to state 85
    '+'           shift, and go to state 86
    '-'           shift, and go to state 87
    '*'           shift, and go to state 88
    '/'           shift, and go to state 89
    ']'           shift, and go to state 115


State 65

   19 dec: KW_CHAR '#' TK_IDENTIFIER '=' . exp ';'

    TK_IDENTIFIER  shift, and go to state 37
    LIT_INTEGER    shift, and go to state 38
    LIT_REAL       shift, and go to state 39
    LIT_CHAR       shift, and go to state 40
    '!'            shift, and go to state 41
    '('            shift, and go to state 42

    exp  go to state 116


State 66

   11 dec: KW_INT TK_IDENTIFIER '=' exp . ';'
   54 exp: exp . '+' exp
   55    | exp . '-' exp
   56    | exp . '*' exp
   57    | exp . '/' exp
   58    | exp . '<' exp
   59    | exp . '>' exp
   61    | exp . OPERATOR_LE exp
   62    | exp . OPERATOR_GE exp
   63    | exp . OPERATOR_EQ exp
   64    | exp . OPERATOR_NE exp
   65    | exp . OPERATOR_AND exp
   66    | exp . OPERATOR_OR exp
